läuft in den basics (ballbesitz und speichern)

--- a/web/index.html
+++ b/web/index.html
@@ -24,13 +24,14 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="floorball_track">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="assets/logo/floorball_stats_logo_big_arrow.png"/>
 
   <title>floorball_track</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="assets/logo/floorball_stats_logo_big_arrow.png">
+
 
   <script>
     // The value below is injected by flutter build, do not touch.
